log/build_2025-01-19_21-54-18/autonomous_rov/stdout_stderr.log
running egg_info
writing ../../build/autonomous_rov/autonomous_rov.egg-info/PKG-INFO
writing dependency_links to ../../build/autonomous_rov/autonomous_rov.egg-info/dependency_links.txt
writing entry points to ../../build/autonomous_rov/autonomous_rov.egg-info/entry_points.txt
writing requirements to ../../build/autonomous_rov/autonomous_rov.egg-info/requires.txt
writing top-level names to ../../build/autonomous_rov/autonomous_rov.egg-info/top_level.txt
reading manifest file '../../build/autonomous_rov/autonomous_rov.egg-info/SOURCES.txt'
writing manifest file '../../build/autonomous_rov/autonomous_rov.egg-info/SOURCES.txt'
running build
running build_py
copying autonomous_rov/visual_servoing.py -> /home/projet_sysmer/ros2_ws/build/autonomous_rov/build/lib/autonomous_rov
copying autonomous_rov/image_processing_tracker.py -> /home/projet_sysmer/ros2_ws/build/autonomous_rov/build/lib/autonomous_rov
running install
running install_lib
copying /home/projet_sysmer/ros2_ws/build/autonomous_rov/build/lib/autonomous_rov/visual_servoing.py -> /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov
byte-compiling /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov/visual_servoing.py to visual_servoing.cpython-310.pyc
  File "/home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov/visual_servoing.py", line 190
    f'{yaw_left_right}, {self.thruttle}, {}')
                                            ^
SyntaxError: f-string: empty expression not allowed

running install_data
copying launch/run_visual_servo.launch -> /home/projet_sysmer/ros2_ws/install/autonomous_rov/share/autonomous_rov/launch
copying setup.py -> /home/projet_sysmer/ros2_ws/install/autonomous_rov/share/autonomous_rov/lib
running install_egg_info
removing '/home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/autonomous_rov/autonomous_rov.egg-info to /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov-0.0.0-py3.10.egg-info
running install_scripts
Installing image_processing_tracker script to /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/autonomous_rov
Installing pinger_node script to /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/autonomous_rov
Installing video script to /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/autonomous_rov
Installing visual_servoing script to /home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/autonomous_rov
writing list of installed files to '/home/projet_sysmer/ros2_ws/build/autonomous_rov/install.log'
